# 3D-graphics-engine

./: CMakeLists.txt  Dockerfile  README.md  buildspec.yml  configure.sh
.github/workflows/: build-windows.yml  cmake-multi-platform.yml
examples/CharacterController/: CharacterController.cpp
examples/LoadModel/: LoadModel.cpp
examples/RigidBody/: RigidBody.cpp
examples/ShaderArt/: ShaderArt.cpp
examples/SimpleCube/: SimpleCube.cpp
include/Engine/: Camera.h  Engine.h  Light.h  Object3D.h  Physics.h
src/Engine/: DebugWindow.cpp
src/Engine/ECS/: CMakeLists.txt
src/Engine/ECS/include/: DynamicCharacterController.h  Mesh.h  MeshInstances.h  Model.h  Rigidbody.h
src/Engine/ECS/src/: DynamicCharacterController.cpp  ECS.cpp  Rigidbody.cpp
